add index and style file

--- a/ramda-js/index.html
+++ b/ramda-js/index.html
@@ -6,11 +6,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="style.css">
-    <title>Ramda.js</title>
+    <title>
+        Radma.js
+    </title>
 </head>
 
 <body style="margin: 30px 100px;">
-    <h1>Ra<span style="color:
+    <h1 class="logo">Ra<span style="color:
         #4BCAFF ;">dma.js</span></h1>
     <nav class="menu">
         <a class="menu__link" href="">Functional Programming</a>
@@ -26,28 +28,28 @@
             <li>Introductions</li>
             <li>Philosophy</li>
         </ul>
-        <div>
-            <img src="" alt="">
+        <div class="content__right">
+            <img src="/img/top1-img.png" alt="image">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eveniet animi commodi possimus, ex
-                nisi
-                itaque blanditiis culpa vero distinctio ullam consequatur est ut neque ipsa assumenda quia. Doloribus,
-                rerum!
+                Lorem ipsum — классическая панграмма, условный, зачастую бессмысленный текст-заполнитель, вставляемый в
+                макет страницы. Используется в качестве заполнителя по крайней мере с XVI века. Является искажённым
+                отрывком из философского трактата Марка Туллия Цицерона «О пределах добра и зла», написанного в 45 году
+                до н. э. на латинском языке, обнаружение сходства атрибутируется Ричарду МакКлинтоку.
             </p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui sapiente cum architecto voluptas cupiditate
-                eius sint voluptate! Error facilis natus, quidem incidunt quia fugiat magnam tempora obcaecati veniam.
-                Porro, quia?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.</p>
         </div>
     </section>
     <footer>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-        <span></span>
+        <a class="footer__item">Ramda</a>
+        <a class="footer__item">Why Ramda?</a>
+        <a class="footer__item">What's Different?</a>
+        <a class="footer__item">Introductions</a>
+        <a class="footer__item">Philosophy</a>
+        <span style="float: right;" class="footer__item">Copyright © 2018</span>
     </footer>
 </body>
 
