--- a/Milan-holidays/index.html
+++ b/Milan-holidays/index.html
@@ -49,7 +49,7 @@
             </div>
         </section>
         <footer>
-            <p>© 2018 Copyright Milan Holidays, Inc. All rights reserved.</p>
+            © 2018 Copyright Milan Holidays, Inc. All rights reserved.
         </footer>
     </div>
 </body>
